fix table alignment

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -19,3 +19,7 @@ table th {
 table td {
 	border-bottom: 1px dashed #dddddd;
 }
+
+.highlight table {
+	margin-bottom: 0;
+}
